--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -3,15 +3,20 @@ name: ECWE Backend CI/CD
 on:
   push:
     branches:
-      - devops-poc
-      - test
-
+      - develop
+      - uat
+    paths:
+      - backend-django/**
+      - .github/workflows/backend-cicd.yml
 
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - devops-poc
-      - test
+      - develop
+      - uat
+    paths:
+      - backend-django/**
+      - .github/workflows/backend-cicd.yml
 
   workflow_dispatch:
     inputs:
@@ -43,15 +48,43 @@ on:
         default: dev
 
 jobs:
-#Dockerfile linting
-  preBuild:
+  build_and_push_image:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    name: Build and Deploy Job
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Lint Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
+      - uses: actions/checkout@v2
         with:
-          dockerfile: backend-django/djangoproject/Dockerfile
-          config: .hadolint.yaml
+          submodules: true
+
+      - name: Set image name
+        run: |
+          if [ "${{ github.event_name }}" == "push" ]; then
+            BRANCH_NAME=${GITHUB_REF##*/}
+          elif [ "${{ github.event_name }}" == "pull_request" ]; then
+            BRANCH_NAME=${{ github.head_ref }}
+          elif [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            BRANCH_NAME=${GITHUB_REF##*/}
+          fi
+          if [ "${{ github.event_name }}" == "workflow_dispatch" && "${{ github.event.inputs.build_image_tag }}" != "v0.0.0" ]; then
+            IMAGE_TAG=${{ github.event.inputs.build_image_tag }}
+          else
+            IMAGE_TAG=$BRANCH_NAME-${GITHUB_SHA::7}
+          fi 
+          echo "IMAGE_NAME=${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ vars.APP_NAME }}:$IMAGE_TAG" >> $GITHUB_ENV
+
+      - name: Login to ACR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: Build and Push Image
+        run: |
+            docker build . -t $IMAGE_NAME 
+            docker push $IMAGE_NAME
+
+      
+
+  
