--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -49,7 +49,7 @@ on:
 
 jobs:
   build_and_push_image:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed') || github.event_name == 'workflow_dispatch'
     name: Build and Deploy Job
     runs-on: ubuntu-latest
     steps:
