--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -5,18 +5,14 @@ on:
     branches:
       - develop
       - uat
-    paths:
-      - backend-django/**
-      - .github/workflows/backend-cicd.yml
+
 
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - develop
       - uat
-    paths:
-      - backend-django/**
-      - .github/workflows/backend-cicd.yml
+
 
   workflow_dispatch:
     inputs:
@@ -59,6 +55,7 @@ jobs:
 
       - name: Set image name
         run: |
+          set -x
           if [ "${{ github.event_name }}" == "push" ]; then
             BRANCH_NAME=${GITHUB_REF##*/}
           elif [ "${{ github.event_name }}" == "pull_request" ]; then
@@ -71,6 +68,7 @@ jobs:
           else
             IMAGE_TAG=$BRANCH_NAME-${GITHUB_SHA::7}
           fi 
+          echo "$IMAGE_TAG"
           echo "IMAGE_NAME=${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ vars.APP_NAME }}:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Login to ACR
