--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -1,19 +1,7 @@
 name: ECWE Backend CI/CD
 
 on:
-  push:
-    branches:
-      - develop
-      - uat
-
-
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
-    branches:
-      - develop
-      - uat
-
-
+  
   workflow_dispatch:
     inputs:
       build_and_deploy:
@@ -75,8 +63,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.AZURE_CLIENT_ID_SP }}
+          password: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Build and Push Image
         run: |
