--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -60,7 +60,7 @@ jobs:
           echo "IMAGE_NAME=${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ vars.APP_NAME }}:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Login to ACR
-        uses: docker/login-action@v3
+        uses: azure/docker-login@v1
         with:
           registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.AZURE_CLIENT_ID_SP }}
