--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Login to ACR
         uses: azure/docker-login@v1
         with:
-          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.AZURE_CLIENT_ID_SP }}
           password: ${{ secrets.AZURE_CLIENT_SECRET }}
 
