--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -58,7 +58,13 @@ jobs:
           fi 
           echo "$IMAGE_TAG"
           echo "IMAGE_NAME=${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ vars.APP_NAME }}:$IMAGE_TAG" >> $GITHUB_ENV
-
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID_SP }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          
       - name: Login to ACR
         uses: azure/docker-login@v1
         with:
