--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -58,12 +58,9 @@ jobs:
           fi 
           echo "$IMAGE_TAG"
           echo "IMAGE_NAME=${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ vars.APP_NAME }}:$IMAGE_TAG" >> $GITHUB_ENV
-      - name: Azure login
-        uses: azure/login@v2
+      - uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID_SP }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
           
       - name: Login to ACR
         uses: azure/docker-login@v1
