--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -61,19 +61,6 @@ jobs:
       - uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          
-      - name: Login to ACR
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.AZURE_CLIENT_ID_SP }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}
-
-      - name: Build and Push Image
-        run: |
-            docker build . -t $IMAGE_NAME 
-            docker push $IMAGE_NAME
-
       
-
-  
+      - name: ACR task
+        run: az acr task create --registry chaos1990 --login-server chaos1990.azurecr.io --name myTask --file acr_task.yml 
