--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -63,7 +63,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: ACR task
-        run: az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null --use-identity ${{ secrets.AZURE_CLIENT_ID }}
-
-      - name: acr task run
-        run: az acr task run --registry chaos1990 --name myTask
+        run: |
+          az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null 
+          az acr task credential add --name myTask --registry chaos1990 --login-server chaos1990.azurecr.io --use-identity ${{ secrets.AZURE_CLIENT_ID }}
+          az acr task run --registry chaos1990 --name myTask
