--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -64,6 +64,7 @@ jobs:
       
       - name: ACR task
         run: |
-          az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null 
-          az acr task credential add --name myTask --registry chaos1990 --login-server chaos1990.azurecr.io --use-identity ${{ secrets.AZURE_CLIENT_ID }}
-          az acr task run --registry chaos1990 --name myTask
+          az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null --assign-identity ${{ secrets.AZURE_CLIENT_ID }}
+
+      - name: acr task run    
+        run: az acr task run --registry chaos1990 --name myTask
