--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -67,7 +67,7 @@ jobs:
           az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null --assign-identity /subscriptions/a86b02d4-bdfe-4fec-b63a-18c61d992583/resourceGroups/acr-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/acrId
       - name: assign roles
         run: |
-          principalID=$(az acr task show --name myTask --registry chaos1990 --query identity.principalId --output tsv)
+          principalID=$(az acr task show --name myTask --registry chaos1990 --query identity.userAssignedIdentities.principalId --output tsv)
           baseregID=$(az acr show --name chaos1990 --query id --output tsv)
           az role assignment create --assignee $principalID --scope $baseregID --role acrpush
       - name: acr cred
