--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -65,5 +65,7 @@ jobs:
       - name: ACR task
         run: |
           az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null --assign-identity /subscriptions/a86b02d4-bdfe-4fec-b63a-18c61d992583/resourceGroups/acr-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/acrId
+      - name: add cred
+        run: az acr task credential add --name myTask --registry chaos1990 --login-server chaos1990.azurecr.io --use-identity ${{ secrets.AZURE_CLIENT_ID }}
       - name: acr task run    
         run: az acr task run --registry chaos1990 --name myTask 
