--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -62,10 +62,16 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
-      - name: ACR task
-        run: |
-          az acr task create --registry chaos1990 --name myTask --file acr_task.yml --context /dev/null --assign-identity /subscriptions/a86b02d4-bdfe-4fec-b63a-18c61d992583/resourceGroups/acr-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/acrId
-      - name: add cred
-        run: az acr task credential add --name myTask --registry chaos1990 --login-server chaos1990.azurecr.io --use-identity ${{ secrets.AZURE_CLIENT_ID }}
-      - name: acr task run    
-        run: az acr task run --registry chaos1990 --name myTask 
+      - name: Public IP
+        id: ip
+        uses: haythem/public-ip@v1.3
+
+      - name: add ip
+        run: az acr network-rule add --name ritam0190 --ip-address ${{ steps.ip.outputs.ipv4 }}
+
+      - name: Login to ACR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
