--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -61,6 +61,9 @@ jobs:
       - uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Build and Push Image
+        run: |
+            docker build -t $IMAGE_NAME .
       
       - name: Public IP
         id: ip
@@ -72,3 +75,10 @@ jobs:
           registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: add ip
+        run: az acr network-rule add --name ritam0190 --ip-address ${{ steps.ip.outputs.ipv4 }}
+
+      - name: Build and Push Image
+        run: |
+          docker push $IMAGE_NAME
