--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -74,8 +74,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.AZURE_CLIENT_ID_SP }}
+          password: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       
 
