--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -61,25 +61,7 @@ jobs:
       - uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Build and Push Image
-        run: |
-            docker build -t $IMAGE_NAME .
-      
-      - name: Public IP
-        id: ip
-        uses: haythem/public-ip@v1.3
-      - name: add ip
-        run: az acr network-rule add --name ritam0190 --ip-address ${{ steps.ip.outputs.ipv4 }}
-      - name: Login to ACR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.AZURE_CLIENT_ID_SP }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}   
 
-      - name: Build and Push Image
+      - name: ACR task create
         run: |
-          docker push $IMAGE_NAME
-
-      - name: remove ip 
-        run: az acr network-rule remove --name ritam0190 --ip-address ${{ steps.ip.outputs.ipv4 }}
+          az acr task create --registry ritam1990 --name myTask --file acr_task.yml --context /dev/null --auth-mode None --assign-identity [system]
