--- a/.github/workflows/samplci.yml
+++ b/.github/workflows/samplci.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: ACR task create
         run: |
-          az acr task create --registry ritam0190 --name myTask --file acr_task.yml --context /dev/null --auth-mode None --assign-identity [system]
+          az acr task create --registry ritam0190 --name myTask --file acr_task.yml --context $(PWD) --auth-mode None --assign-identity [system]
 
       - name: assign acr role 
         run: |
